--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,24 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCnr-Sxlgu9soj-V9u4xaoP1kDEy3ULW3A"/>
-
-        <activity
-            android:name=".ui.activity.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar.Child">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCnr-Sxlgu9soj-V9u4xaoP1kDEy3ULW3A" />
+        
+        <activity android:name=".ui.activity.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.activity.MainActivity"/>
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         <activity android:name=".ui.activity.IntroActivity" />
         <activity
             android:name=".ui.activity.SearchResultActivity"
@@ -52,7 +59,13 @@
             android:parentActivityName=".ui.activity.AccountActivity" />
         <activity android:name=".ui.activity.CompleteMusicianProfileActivity" />
         <activity android:name=".ui.activity.BookingDetailsActivity" />
-        <activity android:name=".ui.activity.ViewMapGig"></activity>
+        <activity android:name=".ui.activity.ViewMapGig" />
+        <activity android:name=".ui.activity.JoinAsActivity" />
+        <activity android:name=".ui.activity.RegisterAsOrganizerActivity" />
+        <activity android:name=".ui.activity.RegisterAsMusicianActivity" />
+        <activity android:name=".ui.activity.LoginAsOrganizerActivity" />
+        <activity android:name=".ui.activity.LoginAsMusicianActivity" />
+        <activity android:name=".ui.activity.LoginAsActivity" />
     </application>
 
 </manifest>
