--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 10 15:06:17 ICT 2016
-ndk.dir=C\:\\Users\\Paklek\\AppData\\Local\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\Paklek\\AppData\\Local\\Android\\sdk
+#Sun Aug 14 18:08:55 ICT 2016
+ndk.dir=D\:\\SOFTWARE\\Android Studio\\sdk\\ndk-bundle
+sdk.dir=D\:\\SOFTWARE\\Android Studio\\sdk
