search and create band

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCnr-Sxlgu9soj-V9u4xaoP1kDEy3ULW3A" />
+        <meta-data
+            android:name="CLOUDINARY_URL"
+            android:value="cloudinary://627999879788938:Tfnf61ZtXn61Ct-Jbr_F__1zSJ8@dv5anayv1"/>
 
         <activity
             android:name=".ui.activity.SplashActivity"
@@ -65,7 +68,9 @@
         <activity android:name=".ui.activity.LoginAsOrganizerActivity" />
         <activity android:name=".ui.activity.LoginAsMusicianActivity" />
         <activity android:name=".ui.activity.LoginAsActivity" />
-        <activity android:name=".ui.activity.AddBandActivity"></activity>
+        <activity android:name=".ui.activity.CreateBandActivity"
+            android:theme="@style/Biasa"/>
+        <activity android:name=".ui.activity.GroupBandActivity"></activity>
     </application>
 
 </manifest>
