--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,8 @@
             android:theme="@style/Biasa" />
         <activity android:name=".ui.activity.GroupBandActivity" />
         <activity android:name=".ui.activity.CreateGigActivity" />
-        <activity android:name=".ui.activity.YourGigActivity"></activity>
+        <activity android:name=".ui.activity.YourGigActivity" />
+        <activity android:name=".ui.activity.KonfirmasiPembayaranActivity"></activity>
     </application>
 
 </manifest>
