--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.google.android.gms:play-services-maps:9.4.0'
     compile 'com.cloudinary:cloudinary-android:1.4.5'
+    compile 'com.cloudinary:cloudinary-core:1.4.5'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
