--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.google.android.gms:play-services-maps:9.4.0'
+    compile 'com.google.android.gms:play-services-maps:10.0.0'
     compile 'com.cloudinary:cloudinary-android:1.4.5'
     compile 'com.cloudinary:cloudinary-core:1.4.5'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'joda-time:joda-time:2.9.7'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
