--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,17 +23,24 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile ('com.android.support:support-v4:23.4.0') {
+        force = true;
+    }
     compile 'com.android.support:design:23.4.0'
     compile 'com.github.siyamed:android-shape-imageview:0.9.3'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.google.android.gms:play-services-maps:10.0.0'
+    compile 'com.google.android.gms:play-services-maps:9.0.2'
+    compile 'com.google.android.gms:play-services-location:9.0.2'
     compile 'com.cloudinary:cloudinary-android:1.4.5'
     compile 'com.cloudinary:cloudinary-core:1.4.5'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     compile 'joda-time:joda-time:2.9.7'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.google.firebase:firebase-core:9.0.2'
+    compile 'com.google.firebase:firebase-messaging:9.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
