--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,7 +98,8 @@
         <activity android:name=".ui.activity.RemoveMusicianFromGroupActivity" />
         <activity android:name=".ui.activity.RemoveMemberMusicianActivity" />
         <activity android:name=".ui.activity.WithdrawalActivity" />
-        <activity android:name=".ui.activity.YouTubeVideoActivity"></activity>
+        <activity android:name=".ui.activity.YouTubeVideoActivity" />
+        <activity android:name=".ui.activity.ReviewMusicianActivity"></activity>
     </application>
 
 </manifest>
